@@ -1,3 +1,6 @@
 ## Курсовая работа
 ===
 
+**for javafx**
+
+`  "vmArgs": "--module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml",`
